<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_8"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTextAppearance.Subtitle2.Bold"
        android:gravity="center"
        android:text="@string/welcome_to_groom_exprez"
        android:padding="@dimen/dimen_8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:gravity="center"
        style="@style/AppTextAppearance.Subtitle2"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/dimen_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"/>

    <TextView
        android:id="@+id/tv_booking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_12"
        android:text="@string/for_booking_click_here"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dimen_8"
        android:background="@drawable/ic_background_yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description"/>


    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:padding="@dimen/dimen_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_booking"
        android:layout_margin="@dimen/dimen_8"/>

    <TextView
        android:id="@+id/tv_interested"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AppTextAppearance.Subtitle2"
        android:gravity="center"
        android:text="@string/order_booking_description"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>





